# potrace_py

./: .gitignore  README.md  potrace.py  setup.cfg  setup.py
potrace/: __main__.py  common.py  io.py  potrace.py
potrace/potrace_py.egg-info/: SOURCES.txt
potrace_py.egg-info/: PKG-INFO  SOURCES.txt
src/: common.py  potrace.py
src/io/: svg.py
src/potrace_py.egg-info/: PKG-INFO  SOURCES.txt
test/: test.py
