[metadata]
name = potrace_py
version = 0.0.1
author = Mahdi Lamb
author_email = mahdilamb[at]gmail[dot]com
description = "Port of potrace written in python"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahdilamb/potrace_py
project_urls =
    Bug Tracker = https://github.com/mahdilamb/potrace_py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-or-later
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.6
install_requires =
    numpy
[options.packages.find]
where = src